French version of the website added, css, js & fonts folders created, links to bootstrap, fonts & jquery changed, images optimized...

--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
 
-    <link rel="stylesheet" type="text/css" href="master.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <style>
 
@@ -147,9 +147,9 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a>
+                    <a href="fr/index.html"><img class="flag" src="images/frFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="contact.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
@@ -205,7 +205,7 @@
                          <img src="images/resolving.png" alt="Resolving">
                         </td>
                         <td>
-                            Development of an app which takes information from a database to a PDF and Excel using PHP libraries for <strong><a class="link" target="_blank" href="http://resolving.com">Resolving</a></strong> 
+                            PDF and Excel files creation by taking information from a database using PHP libraries for <strong><a class="link" target="_blank" href="http://resolving.com">Resolving</a></strong>. 
                         </td>
                     </tr>
                     <tr>
@@ -217,7 +217,7 @@
                             <img src="images/starfleetGroup.jpg" alt="Starfleet Group">
                         </td>
                         <td>
-                            Development of the Japanese website <a class="link" target="_blank" href="https://www.ecofa.jp"><em>www.ecofa.jp</em></a> which is a e-commerce of recycled products for <strong><a class="link" target="_blank" href="http://www.starfleet.co.jp">Starfleet Group</a></strong> 
+                            Development of the Japanese website <a class="link" target="_blank" href="https://www.ecofa.jp"><em>Ecofa</em></a> which is a e-commerce of recycled products for <strong><a class="link" target="_blank" href="http://www.starfleet.co.jp">Starfleet Group</a></strong>. 
                         </td>
                     </tr>
                     <tr>
@@ -229,7 +229,7 @@
                             <img src="images/aitySolutions.jpg" alt="Aity Solutions">
                         </td>
                         <td>
-                            Involved in the writing of the online guide <a class="link" target="_blank" href="http://www.overcambodia.com/en"><em>www.overcambodia.com</em></a> for <strong><a class="link" target="_blank" href="http://aitysolutions.com">Aity Solutions</a></strong> 
+                            Involved in the writing of the online guide <a class="link" target="_blank" href="http://www.overcambodia.com/en"><em>Overcambodia</em></a> for <strong><a class="link" target="_blank" href="http://aitysolutions.com">Aity Solutions</a></strong>. 
                         </td>
                     </tr>
                     <tr>
@@ -315,7 +315,7 @@
         </div>
     </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
