--- a/fr/index.html
+++ b/fr/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="fr">
 <head>
-    <title>Welcome to my portfolio</title>
+    <title>Bienvenu sur mon portfolio</title>
     <meta charset="UTF-8">
 
-    <meta name="description" content="Hello, I'm Thierry HOR. I'm a Full-Stack Web Developer and this is my portfolio. Let's create awesome websites together!">
-    <meta name="keywords" content="Full-Stack Web Developer, services, responsive, awesome websites">
+    <meta name="description" content="Bonjour, Je m'appelle Thierry HOR. Je suis un Développeur Web Full-Stack Trilingue et voici mon portfolio. Créons des sites web au TOP ensemble!">
+    <meta name="keywords" content="Développeur Web Full-Stack Trilingue, services, responsive, sites web au top">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
 
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
 
     <style>
 
@@ -31,7 +31,6 @@
         position: absolute;
         right: 28%;
         top: 100px;
-        width: 50px;
         width: 16%;
         z-index: 2;
     }
@@ -41,7 +40,6 @@
         position: absolute;
         right: 14%;
         top: 20px;
-        width: 200px;
         width: 22%;
     }
 
@@ -83,14 +81,14 @@
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="skills.html">Skills</a></li>
+                    <li class="active"><a href="index.html">Acceuil</a></li>
+                    <li><a href="skills.html">Compétences</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" src="images/frFlag.png"></a>
+                    <a href="index.html"><img class="flag" src="../images/frFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
@@ -100,22 +98,22 @@
         <div class="container-fluid">
             <div class="row titleBorder">
                 <div class="col-sm-offset-1 col-xs-11">
-                    <h2 class="title">Create awesome websites</h2>
+                    <h2 class="title">Créez des sites web au TOP !</h2>
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <h1 class="textCenter">Thierry HOR</h1>
-                <h2 class="textCenter">Full-Stack Web Developer</h2>
+                <h2 class="textCenter">Développeur Web Full-Stack Trilingue</h2>
 
                 <div class="col-sm-offset-1 col-xs-11">
-                    <p class="text">Create websites that are:</p>
-                    <p class="text1 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Up-to-date</p>
+                    <p class="text">Créer des sites web qui sont:</p>
+                    <p class="text1 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> A jour</p>
                     <p class="text2 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Responsive <i class="fa fa-mobile" aria-hidden="true"></i> <i class="fa fa-tablet" aria-hidden="true"></i> <i class="fa fa-desktop" aria-hidden="true"></i></p>
-                    <p class="text3 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> And of course awesome!</p>
-                    <img src="images/portfolioIphone.png" alt="Portfolio on Smartphone" class="portfolioIphone hidden-xs hidden-sm">
-                    <img src="images/portfolioTablet.png" alt="Portfolio on Tablet" class="portfolioTablet hidden-xs hidden-sm">
+                    <p class="text3 text-primary"><i class="fa fa-check-square-o" aria-hidden="true"></i> Et bien sûr au TOP !</p>
+                    <img src="../images/portfolioIphone.png" alt="Portfolio on Smartphone" class="portfolioIphone hidden-xs hidden-sm">
+                    <img src="../images/portfolioTablet.png" alt="Portfolio on Tablet" class="portfolioTablet hidden-xs hidden-sm">
                 </div>
             </div>
         </div>
@@ -132,7 +130,7 @@
                 <div class="col-xs-6 socialCol">
                     <ul class="list-inline copyright">
                         <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
-                        <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
+                        <li><a href="http://www.viadeo.com/fr/profile/thierry.hor/fr" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
                     </ul>
                 </div>
@@ -140,7 +138,7 @@
         </div>
     </footer>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
