--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="fr">
 <head>
-    <title>These are my projects</title>
+    <title>Voici mes projets</title>
     <meta charset="UTF-8">
 
-    <meta name="description" content="These are my personal projects, they are all responsive.">
-    <meta name="keywords" content="portfolio, responsive, personal projects">
+    <meta name="description" content="Voici mes projets personnels, ils sont tous responsive.">
+    <meta name="keywords" content="portfolio, responsive, projects personnels">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
 
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
 
     <style>
 
@@ -90,14 +90,14 @@
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
+                    <li><a href="skills.html">Compétences</a></li>
                     <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" src="images/frFlag.png"></a>
+                    <a href="index.html"><img class="flag" src="../images/frFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
@@ -113,29 +113,29 @@
         </div>
 
         <div class="container"> 
-            <h3><strong>Responsive Websites & Personal Projects</strong></h3>       
+            <h3><strong>Site Web Responsives & Projects Personnels</strong></h3>       
         </div>
 
         <div class="container-fluid">
             <div class="row">           
                 <div class="col-md-4 col-sm-6 colPortfolio text-center">
                     <figure>
-                        <img class="imgKwoon img-thumbnail" src="images/kwoonIntegration.png" alt="Front-End Project" data-toggle="modal" data-target="#project1" data-backdrop="true">
-                        <figcaption><strong>Front-End Project</strong></figcaption>
+                        <img class="imgKwoon img-thumbnail" src="../images/kwoonIntegration.png" alt="Front-End Project" data-toggle="modal" data-target="#project1" data-backdrop="true">
+                        <figcaption><strong>Projet Intégration</strong></figcaption>
                     </figure>
                 </div>
 
                 <div class="col-md-4 col-sm-6 colPortfolio text-center">
                     <figure>
-                        <img class="imgTribute img-thumbnail" src="images/tributePage.jpg" alt="Tribute Page" data-toggle="modal" data-target="#project2" data-backdrop="true">
-                        <figcaption><strong>Tribute Page</strong></figcaption>
+                        <img class="imgTribute img-thumbnail" src="../images/tributePage.jpg" alt="Tribute Page" data-toggle="modal" data-target="#project2" data-backdrop="true">
+                        <figcaption><strong>Page d'Hommage</strong></figcaption>
                     </figure>
                 </div>
                 <div class="clearfix visible-sm-block"></div>
 
                 <div class="col-md-4 col-sm-6 colPortfolio text-center">
                     <div class="comingSoonPad">
-                        <h3 class="comingSoon">Coming Soon <br>Maybe you?</h3>              
+                        <h3 class="comingSoon">A Venir <br>Peut-être vous?</h3>              
                     </div>
                 </div>
                 <div class="clearfix visible-lg-block visible-md-block"></div>
@@ -150,29 +150,30 @@
               <div class="modal-content modalBgColor">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title"><strong>Front-End Project</strong></h4>
+                  <h4 class="modal-title"><strong>Projet Intégration</strong></h4>
                 </div>
                 <div class="modal-body">
                     <div class="col-md-4">
                       <figure>
                             <a href="https://github.com/webdevthierry/Projet-Integration" title="source code of the project" target="_blank">
-                                <img class="imgKwoon2 img-thumbnail" src="images/kwoonIntegration.png" alt="Front-End Project">
+                                <img class="imgKwoon2 img-thumbnail" src="../images/kwoonIntegration.png" alt="Front-End Project">
                             </a>
                             <figcaption>
-                                <strong>Click on the image to see the source code</strong>
+                                <strong>Cliquez sur l'image pour voir le code source</strong>
                             </figcaption>
                       </figure>
                     </div>
                     <div class="col-md-8">
-                      <p>Webpages creation from images
-                      <br> Use of Html5, Css3 & Bootstrap
+                      <p>Création de pages web à partir d'images
+                      <br> Utilisation de Html5, Css3 & Bootstrap
                       <br>
-                      <strong>Features:</strong>
-                      <br>Sliders, Icons, Scrollspy</p>
+                      <strong>Fonctionnalités:</strong>
+                      <br>Sliders, Icônes, Scrollspy</p>
                     </div>
+                  
                 </div>
                 <div class="modal-footer clearStyle">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                 </div>
               </div>
             </div>
@@ -186,27 +187,27 @@
               <div class="modal-content modalBgColor">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal"></button>
-                  <h4 class="modal-title"><strong>Tribute Page</strong></h4>
+                  <h4 class="modal-title"><strong>Page d'Hommage</strong></h4>
                 </div>
                 <div class="modal-body">
                     <div class="col-md-4">
                         <figure>
                             <a href="https://codepen.io/webdevthierry/full/mPWMEr" title="Tribute page in Codepen" target="_blank">
-                                <img class="imgTribute2 img-thumbnail" src="images/tributePage.jpg" alt="Tribute Page">
+                                <img class="imgTribute2 img-thumbnail" src="../images/tributePage.jpg" alt="Tribute Page">
                             </a>
                             <figcaption>
-                                <strong>Click on the image to see the codepen</strong>
+                                <strong>Cliquez sur l'image pour voir le codepen</strong>
                             </figcaption>
                         </figure>
                     </div>
 
                     <div class="col-md-8">
-                        <p>Tribute to the martial arts legend
-                        <br> Use of Html5, Css3 & Bootstrap</p>
+                        <p>Hommage à une légende des arts martiaux
+                        <br> Utilisation de Html5, Css3 & Bootstrap</p>
                     </div>
                 </div>
                 <div class="modal-footer clearStyle">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                 </div>
               </div>
             </div>
@@ -221,7 +222,7 @@
                 </div>
                 <div class="col-xs-6 socialCol">
                     <ul class="list-inline copyright">
-                        <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+                        <li><a href="http://fr.linkedin.com/in/horthierry/fr" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                         <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
                     </ul>
@@ -230,7 +231,7 @@
         </div>
     </footer>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
