--- a/fr/skills.html
+++ b/fr/skills.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="fr">
 <head>
-    <title>What I can do</title>
+    <title>Mes Compétences</title>
     <meta charset="UTF-8">
 
-    <meta name="description" content="These are my web development and language skills.">
-    <meta name="keywords" content="HTML5, CSS3, Bootstrap, JQuery, PHP, MySQL, Git, trilingual, translation">
+    <meta name="description" content="Voici mes compétences informatiques et linguistiques.">
+    <meta name="keywords" content="HTML5, CSS3, Bootstrap, JQuery, PHP, MySQL, Git, trilingue, translation">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
 
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="../css/master.css">
 
     <style>
 
@@ -115,14 +115,14 @@
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="skills.html">Skills</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
+                    <li class="active"><a href="skills.html">Compétences</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" src="images/frFlag.png"></a>
+                    <a href="index.html"><img class="flag" src="../images/frFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
@@ -132,73 +132,73 @@
         <div class="container-fluid">
             <div class="row titleBorder">
                 <div class="col-sm-offset-1 col-xs-11">
-                    <h2 class="title">Skills</h2>
+                    <h2 class="title">Compétences</h2>
                 </div>
             </div>
         </div>
 
         <div class="container">
-            <h3>Web Development: </h3>
+            <h3>Dévelopement Web: </h3>
             <div class="row">
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgHtml skills animSkill" src="images/html5css3.png" alt="Skills HTML5 & CSS3">
+                    <img class="imgHtml skills animSkill" src="../images/html5css3.png" alt="Skill HTML5 & CSS3">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animHtml" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">80% Complete</span>
+                            <span class="sr-only">Complet à 80%</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgBootstrap skills animSkill" src="images/bootstrap.png" alt="Skill Bootstrap">
+                    <img class="imgBootstrap skills animSkill" src="../images/bootstrap.png" alt="Skill Bootstrap">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animBootstrap" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">70% Complete</span>
+                            <span class="sr-only">Complet à 70%</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgJquery skills animSkill" src="images/jquery.png" alt="Skill JQuery">
+                    <img class="imgJquery skills animSkill" src="../images/jquery.png" alt="Skill JQuery">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animJQuery" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                        <span class="sr-only">50% Complete</span>
+                        <span class="sr-only">Complet à 50%</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgPhp skills animSkill" src="images/php.png" alt="Skill PHP">
+                    <img class="imgPhp skills animSkill" src="../images/php.png" alt="Skill PHP">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animPhp" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
+                            <span class="sr-only">Complet à 60%</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgMysql skills animSkill" src="images/mysql.png" alt="Skill MySQL">
+                    <img class="imgMysql skills animSkill" src="../images/mysql.png" alt="Skill MySQL">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animMysql" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
+                            <span class="sr-only">Complet à 60%</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4 col-sm-6 text-center">
-                    <img class="imgGit skills animSkill" src="images/git.png" alt="Skill Git">
+                    <img class="imgGit skills animSkill" src="../images/git.png" alt="Skill Git">
                     <div class="progress">
                         <div class="progress-bar progress-bar-info animGit" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
+                            <span class="sr-only">Complet à 60%</span>
                         </div>
                     </div>
                 </div>
             </div>
-            <h3>Languages: </h3>
+            <h3>Langues: </h3>
             <div class="row">
                 <div class="col-sm-3">
-                    <p>French:
-                    <br>English:
-                    <br>Cambodian (Khmer):
+                    <p>Français:
+                    <br>Anglais:
+                    <br>Cambodgien (Khmer):
                     </p>
                 </div>
                 <div class="col-sm-9">
@@ -207,7 +207,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <p>I have done translation in all 3 languages.</p>
+                    <p>J'ai déjà fait des traductions dans les 3 langues.</p>
                 </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
     			</div>
     			<div class="col-xs-6 socialCol">
     				<ul class="list-inline copyright">
-    					<li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+    					<li><a href="http://fr.linkedin.com/in/horthierry/fr" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
     					<li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
     					<li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
     				</ul>
@@ -229,7 +229,7 @@
     	</div>
 	</footer>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
