--- a/404.html
+++ b/404.html
@@ -2,22 +2,22 @@
 
 <html lang="en">
 <head>
-    <title>Welcome to my portfolio</title>
+    <title>Error page 404</title>
     <meta charset="UTF-8">
 
-    <meta name="description" content="Hello, I'm Thierry HOR. I'm a Full-Stack Web Developer and this is my portfolio.">
-    <meta name="keywords" content="Full-Stack Web Developer, services, responsive, awesome websites">
+    <meta name="description" content="You are on the edited error page 404. The page you are looking for could not be found.">
+    <meta name="keywords" content="Error, page not found">
     <meta name="author" content="Thierry HOR">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script%7CQuattrocento+Sans">
 
-    <link rel="stylesheet" type="text/css" href="master.css">
+    <link rel="stylesheet" href="css/master.css">
 
     <style type="text/css">
 
@@ -54,14 +54,14 @@
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="skills.html"><img class="flag" src="images/frFlag.png"></a>
+                    <a href="fr/index.html"><img class="flag" src="images/frFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="contact.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-11">
                     <p class="errorText">- 404 - Sorry the dog couldn't find the page, however he can take back to the <a href="index.html"><em>homepage</em></a>.</p>
-                    <p class="errorText">- 404 - Oups, le chien n'a pas trouvé la page, cependant il peut vous ramener à la <a href="index.html"><em>page d'accueil</em></a>.</p>
+                    <p class="errorText">- 404 - Oups, le chien n'a pas trouvé la page, cependant il peut vous ramener à la <a href="fr/index.html"><em>page d'accueil</em></a>.</p>
                 </div>
             </div>
             <div class="row">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-xs-6 socialCol">
                     <ul class="list-inline copyright">
-                        <li><a href="http://fr.linkedin.com/in/horthierry" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
+                        <li><a href="http://fr.linkedin.com/in/horthierry/fr" target="_blank"><i class="fa fa-2x fa-linkedin-square"></i></a></li>
                         <li><a href="http://www.viadeo.com/fr/profile/thierry.hor" target="_blank"><i id="viadeo" class="fa fa-2x fa-viadeo-square"></i></a></li>
                         <li><a href="https://github.com/webdevthierry" target="_blank"><i id="github" class="fa fa-2x fa-github-square"></i></a></li>
                     </ul>
@@ -100,7 +100,7 @@
         </div>
     </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
