CV changed and French version added

--- a/fr/about.html
+++ b/fr/about.html
@@ -232,7 +232,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="4" class="cvText">Pour plus d'information, voici mon <em><a href="ThierryCV.pdf" title="My CV in PDF format" download="Thierry's CV - Full-Stack Web Developer.pdf">CV <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></em>
+                            <td colspan="4" class="cvText">Pour plus d'information, voici mon <em><a href="ThierryCVfr.pdf" title="Mon CV au format PDF" download="CV Thierry HOR - Développeur Web Full-Stack Trilingue.pdf">CV <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></em>
                             </td>
                         </tr>
                     </table>
