--- a/fr/portfolio.html
+++ b/fr/portfolio.html
@@ -95,7 +95,7 @@
                     <li class="active"><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="index.html"><img class="flag" src="../images/frFlag.png"></a>
+                    <a href="index.html"><img class="flag" src="../images/FrFlag.png"></a>
                     <div class="div-7"></div>
                     <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
                 </ul>
@@ -186,7 +186,7 @@
               <!-- Modal content-->
               <div class="modal-content modalBgColor">
                 <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal"></button>
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
                   <h4 class="modal-title"><strong>Page d'Hommage</strong></h4>
                 </div>
                 <div class="modal-body">
