--- a/fr/skills.html
+++ b/fr/skills.html
@@ -120,7 +120,7 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="index.html"><img class="flag" src="../images/frFlag.png"></a>
+                    <a href="index.html"><img class="flag" src="../images/FrFlag.png"></a>
                     <div class="div-7"></div>
                     <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
                 </ul>
