navbar removed in page 404, images alt added

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="fr/index.html"><img class="flag" src="images/FrFlag.png"></a>
+                    <a href="fr/index.html"><img class="flag" alt="French Flag" src="images/FrFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="index.html"><img class="flag1" src="images/EngFlag.png"></a>
+                    <a href="index.html"><img class="flag1" alt="English Flag" src="images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
