--- a/fr/index.html
+++ b/fr/index.html
@@ -86,9 +86,9 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="about.html">Qui Suis-Je</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <a href="index.html"><img class="flag" src="../images/FrFlag.png"></a>
+                    <a href="index.html"><img class="flag" alt="Drapeau Français" src="../images/FrFlag.png"></a>
                     <div class="div-7"></div>
-                    <a href="../index.html"><img class="flag1" src="../images/EngFlag.png"></a>
+                    <a href="../index.html"><img class="flag1" alt="Drapeau Anglais" src="../images/EngFlag.png"></a>
                 </ul>
             </div>
         </div>
